working prototype of quality segments
