# backend/swagger_server/controllers/map_data_controller.py
@@ -1,14 +1,11 @@
 import connexion
 import six
 
-from swagger_server.models.api_response import ApiResponse  # noqa: E501
-from swagger_server.models.bumpy_point import BumpyPoint  # noqa: E501
-from swagger_server.models.fix_my_street_point import FixMyStreetPoint  # noqa: E501
-from swagger_server.models.path import Path  # noqa: E501
-from swagger_server import util
+from swagger_server.models.track import Track  # noqa: E501
+from swagger_server import mongodb_interface
 
 
-def get_bumpy_issue_points(bottom_left_lat, bottom_left_lon, top_right_lat, top_right_lon):  # noqa: E501
+def get_bumpy_issue_points():  # noqa: E501
     """Get the autocomputed points
 
      # noqa: E501
@@ -27,7 +24,7 @@ def get_bumpy_issue_points(bottom_left_lat, bottom_left_lon, top_right_lat, top_
     return 'do some magic!'
 
 
-def get_fix_my_street_issue_points(bottom_left_lat, bottom_left_lon, top_right_lat, top_right_lon):  # noqa: E501
+def get_fix_my_street_issue_points():  # noqa: E501
     """Get the FixMyStreet points
 
      # noqa: E501
@@ -46,7 +43,7 @@ def get_fix_my_street_issue_points(bottom_left_lat, bottom_left_lon, top_right_l
     return 'do some magic!'
 
 
-def get_road_quality_segments(bottom_left_lat, bottom_left_lon, top_right_lat, top_right_lon):  # noqa: E501
+def get_road_quality_segments():  # noqa: E501
     """Get the paths composed of segments to display the heatmap
 
      # noqa: E501
@@ -62,4 +59,16 @@ def get_road_quality_segments(bottom_left_lat, bottom_left_lon, top_right_lat, t
 
     :rtype: List[Path]
     """
-    return 'do some magic!'
+    bottom_left_lat = float(connexion.request.args.get('bottomLeftLat', '0.0'))
+    bottom_left_lon = float(connexion.request.args.get('bottomLeftLon', '0.0'))
+    top_right_lat = float(connexion.request.args.get('topRightLat', '0.0'))
+    top_right_lon = float(connexion.request.args.get('topRightLon', '0.0'))
+    geometry = {'$geometry': {'type': 'Polygon', 'coordinates': [[
+        [bottom_left_lon, bottom_left_lat],
+        [bottom_left_lon, top_right_lat],
+        [top_right_lon, top_right_lat],
+        [top_right_lon, bottom_left_lat],
+        [bottom_left_lon, bottom_left_lat]
+    ]]}}
+    tracks = mongodb_interface.get_tracks_by_intersect_geometry(geometry)
+    return list(map(Track.from_dict, tracks)), 200
